force-app/main/default/objects/OppFacade__c/OppFacade__c.object-meta.xml
<CustomObject>
    <description>Additional information for facade opportunities. Originally designed for the US but might be extended in the future.</description>
    <label>Opportunity Facade</label>
    <nameField>
        <label>Facade Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Facades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>