force-app/main/default/objects/OppFacade__c/fields/CladdingMaterial__c.field-meta.xml
<CustomField>
    <fullName>CladdingMaterial__c</fullName>
    <label>Cladding Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PORCELAIN</fullName>
                <default>true</default>
                <label>PORCELAIN</label>
            </value>
            <value>
                <fullName>KRION</fullName>
            </value>
            <value>
                <fullName>XLIGHT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>