force-app/main/default/objects/OppFacade__c/fields/Cost_Estimate_Method__c.field-meta.xml
<CustomField>
    <fullName>Cost_Estimate_Method__c</fullName>
    <label>Cost Estimate Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMALL-PROJECT</fullName>
                <default>true</default>
                <label>SMALL-PROJECT</label>
            </value>
            <value>
                <fullName>PROJECT-SPECIFIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>