force-app/main/default/objects/OppFacade__c/fields/DesignPhase__c.field-meta.xml
<CustomField>
    <fullName>DesignPhase__c</fullName>
    <label>Design Phase</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRE-DESIGN</fullName>
                <default>true</default>
                <label>PRE DESIGN</label>
            </value>
            <value>
                <fullName>SCHEMATICS-DESIGN</fullName>
                <label>SCHEMATICS DESIGN</label>
            </value>
            <value>
                <fullName>DESIGN-DEVELOPMENT</fullName>
                <label>DESIGN DEVELOPMENT</label>
            </value>
            <value>
                <fullName>CONSTRUCTIONS DRAWINGS&amp;SPECIFICATION</fullName>
                <label>CONSTRUCTION DRAWINGS</label>
            </value>
            <value>
                <fullName>BID-GC-LEVEL</fullName>
                <label>BID GC LEVEL</label>
            </value>
            <value>
                <fullName>BID-INSTALLER-LEVEL</fullName>
                <label>BID INSTALLER LEVEL</label>
            </value>
            <value>
                <fullName>CONSTRUCTION-DOCUMENTS</fullName>
                <isActive>false</isActive>
                <label>CONSTRUCTION-DOCUMENTS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>