force-app/main/default/objects/OppFacade__c/fields/GContractorWinner__c.field-meta.xml
<CustomField>
    <fullName>GContractorWinner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Contractor (Winner)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Facades (General Contractor (Winner))</relationshipLabel>
    <relationshipName>Opportunity_Facades1</relationshipName>
    <type>Lookup</type>
</CustomField>