force-app/main/default/objects/OppFacade__c/fields/InstallerWinner__c.field-meta.xml
<CustomField>
    <fullName>InstallerWinner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installer (Winner)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Facades</relationshipLabel>
    <relationshipName>Opportunity_Facades</relationshipName>
    <type>Lookup</type>
</CustomField>