force-app/main/default/objects/OppFacade__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facade Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Facades</relationshipName>
    <type>Lookup</type>
</CustomField>