force-app/main/default/objects/OppFacade__c/fields/MaterialReceived__c.field-meta.xml
<CustomField>
    <fullName>MaterialReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Material Received</label>
    <type>Checkbox</type>
</CustomField>