force-app/main/default/objects/OppFacade__c/fields/ProjectNotes__c.field-meta.xml
<CustomField>
    <fullName>ProjectNotes__c</fullName>
    <label>Project Notes and Special instructions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>