force-app/main/default/objects/OppFacade__c/fields/SignedQuote__c.field-meta.xml
<CustomField>
    <fullName>SignedQuote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Quote</label>
    <type>Checkbox</type>
</CustomField>