force-app/main/default/objects/OppFacade__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Sales Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRODUCT-REVIEW</fullName>
                <default>true</default>
                <label>1-PRODUCT REVIEW</label>
            </value>
            <value>
                <fullName>TECHNICAL-ASSISTANCE</fullName>
                <label>2-TECHNICAL ASSISTANCE</label>
            </value>
            <value>
                <fullName>DESIGN-ASSIST</fullName>
                <label>3-DESIGN ASSIST / COST ESTIMATE</label>
            </value>
            <value>
                <fullName>WON (WORK IN PROGRESS)</fullName>
                <label>4-WON (WORK IN PROGRESS)</label>
            </value>
            <value>
                <fullName>CLOSED</fullName>
                <label>5-CLOSED (FULLY INVOICED)</label>
            </value>
            <value>
                <fullName>LOST</fullName>
                <label>6-LOST</label>
            </value>
            <value>
                <fullName>CLOSED-WON</fullName>
                <isActive>false</isActive>
                <label>CLOSED-WON</label>
            </value>
            <value>
                <fullName>INSTALLATION</fullName>
                <isActive>false</isActive>
                <label>INSTALLATION</label>
            </value>
            <value>
                <fullName>MATERIAL-QUOTE</fullName>
                <isActive>false</isActive>
                <label>MATERIAL QUOTE</label>
            </value>
            <value>
                <fullName>SOLD/SHIPPING</fullName>
                <isActive>false</isActive>
                <label>SOLD/SHIPPING</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>